# mochi

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
docs/: index.html
scripts/: gen-icon.mjs
src/: calendar.js  main.js  pet.js  physics.js  reminders.js  sound.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
