[package]
name = "pet"
version = "0.4.0"
description = "A desktop pet that lives on your screen and nudges you with reminders"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-autostart = "2"
active-win-pos-rs = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
